syntax = "proto3";

package esteemed.v1;

option go_package = "github.com/vicmanager/esteemed/backend/gen/esteemed/v1;esteemedv1";

// EstimationService handles voting, revealing, and round management
service EstimationService {
  // CastVote submits a vote (hidden until reveal)
  rpc CastVote(CastVoteRequest) returns (CastVoteResponse);

  // RevealVotes makes all votes visible (host only)
  rpc RevealVotes(RevealVotesRequest) returns (RevealVotesResponse);

  // ResetRound clears all votes and starts a new round
  rpc ResetRound(ResetRoundRequest) returns (ResetRoundResponse);

  // StartRound begins a new voting round (host only)
  rpc StartRound(StartRoundRequest) returns (StartRoundResponse);

  // WatchVotes streams real-time vote status and results
  rpc WatchVotes(WatchVotesRequest) returns (stream VoteEvent);
}

// Vote represents a participant's vote
message Vote {
  string participant_id = 1;
  string participant_name = 2;
  string value = 3;            // Card value as string (e.g., "5", "XL", "?")
  bool has_voted = 4;          // True if they've submitted a vote
}

// VoteSummary shows statistics after reveal
message VoteSummary {
  repeated Vote votes = 1;
  string average = 2;          // Rounded to nearest card value (string)
  string mode = 3;             // Most common vote (string)
  bool has_consensus = 4;      // All votes are the same
  double numeric_average = 5;  // Raw numeric average (for display)
}

// CastVoteRequest submits a vote
message CastVoteRequest {
  string room_id = 1;
  string participant_id = 2;
  string session_token = 3;
  string value = 4;           // Card value as string (e.g., "5", "XL", "?")
}

message CastVoteResponse {}

// RevealVotesRequest reveals all votes
message RevealVotesRequest {
  string room_id = 1;
  string participant_id = 2;   // Must be host
  string session_token = 3;
}

message RevealVotesResponse {
  VoteSummary summary = 1;
}

// ResetRoundRequest clears votes for a new round
message ResetRoundRequest {
  string room_id = 1;
  string participant_id = 2;   // Must be host
  string session_token = 3;
}

message ResetRoundResponse {}

// StartRoundRequest begins a new voting round
message StartRoundRequest {
  string room_id = 1;
  string participant_id = 2;   // Must be host
  string session_token = 3;
}

message StartRoundResponse {}

// WatchVotesRequest subscribes to vote updates
message WatchVotesRequest {
  string room_id = 1;
  string session_token = 2;
}

// VoteEvent is sent when vote state changes
message VoteEvent {
  oneof event {
    VoteCast vote_cast = 1;
    VotesRevealed votes_revealed = 2;
    RoundReset round_reset = 3;
  }
}

message VoteCast {
  string participant_id = 1;
  string participant_name = 2;
  // Value is not included - only that they voted (until reveal)
}

message VotesRevealed {
  VoteSummary summary = 1;
}

message RoundReset {}
